--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-
+paperplotlib="*"
+prettytable="*"
 
 [build-system]
 requires = ["poetry-core"]
